add styles to existing recipe pages

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -4,13 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>Bibimbap</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <a href="../index.html">Homepage</a>
+
+        <div class="page-head">
+            <a class="homelink" href="../index.html">Homepage</a>
         
-        <h1>Bibimbap</h1>
-        <img src="../images/bibimbap.jpg" alt="Bibimbap" width="600" height="400">
+            <h1>Bibimbap</h1>
+            <img src="../images/bibimbap.jpg" alt="Bibimbap" width="600" height="400">
+        </div>
 
         <h2>Description</h2>
         <p>This bibimbap recipe makes a popular and delicious Korean meal of warm white rice topped with vegetables, beef, a fried egg, and spicy gochujang chili paste. Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.</p>
