--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -4,13 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>Miso Soup</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <a href="../index.html">Homepage</a>
+        <div class="page-head">
+            <a class="homelink" href="../index.html">Homepage</a>
 
-        <h1>Miso Soup</h1>
-        <img src="../images/miso-soup.jpg" alt="Miso Soup" width="700" height="500">
+            <h1>Miso Soup</h1>
+            <img src="../images/miso-soup.jpg" alt="Miso Soup" width="700" height="500">
+        </div>
+        
 
         <h2>Description</h2>
         <p>This miso soup is full of savory flavors. Add more dashi to your soup if you want a stronger stock. You can use yellow, white, or red miso paste for this soup — yellow miso is sweet and creamy, red miso is stronger and saltier.</p>
