--- a/recipes/popcorn-chicken.html
+++ b/recipes/popcorn-chicken.html
@@ -4,14 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>Sweet Chili Popcorn Chicken</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <a href="../index.html">Homepage</a>
+        <div class="page-head">
+            <a class="homelink" href="../index.html">Homepage</a>
 
-        <h1>Sweet Chili Popcorn Chicken</h1>
-        <img src="../images/popcorn-chicken.jpg" alt="Sweet Chili Popcorn Chicken" width="500" height="400">
-
+            <h1>Sweet Chili Popcorn Chicken</h1>
+            <img src="../images/popcorn-chicken.jpg" alt="Sweet Chili Popcorn Chicken" width="500" height="400">
+        </div>
+        
         <h2>Description</h2>
         <p>Sweet Chili Popcorn Chicken is, quite literally, a “party in your mouth.” Each bite is coated in a toasted coconut-panko breading that’s irresistiblycrunchy and slightly sweet, perfectly balanced by a sticky-sweet chili glaze. And the kicker? They’re baked—not fried—but you’d never guess it from the delicious texture.</p>
         
