add flexbox divs to page content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./styles/homepage.css">
     </head>
     
     <body>
@@ -14,6 +14,7 @@
             <li><a href="./recipes/popcorn-chicken.html">Sweet Chili Popcorn Chicken</a></li>
             <li><a href="./recipes/bibimbap.html">Bibimbap</a></li>
             <li><a href="./recipes/miso-soup.html">Miso Soup</a></li>
+            <li><a href="./recipes/empty.html">Empty Link</a></li>
         </ul>
         
     </body>
